--- a/index.html
+++ b/index.html
@@ -34,6 +34,31 @@
     #produit {
         height: 500px;
     }
+
+    ul,
+    li,
+    a,
+    span {
+        color: black;
+        font-size: large;
+        text-align: center;
+        background-color: brown;
+    }
+
+
+    .dropdown-submenu {
+        position: relative;
+    }
+
+    .dropdown-submenu .dropdown-menu {
+        top: 0;
+        left: 100%;
+        margin-top: -1px;
+    }
+
+    .navbar-nav li:hover>ul.dropdown-menu {
+        display: block;
+    }
 </style>
 
 <body class="bg-danger">
@@ -45,69 +70,41 @@
                 <div name="shearch" class="row" style="height: 25%;">
                     <div class="d-flex " style="background-color: rgba(206, 216, 21, 0.651);">
 
-                        <div class="col dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" id="Felins"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Felins</a>
-                            <div class="dropdown-menu" aria-labelledby="Felins">
-                                <a class="dropdown-item" href="#">Lien</a>
-                                <button class="dropdown-item" type="button">Bouton</button>
-                                <span class="dropdown-item-text">Texte</span>
-                            </div>
+
+
+                        <div class="col d-flex nav navbar-nav">
+
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                    aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Services</span>
+                                    <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li class="dropright-submenu">
+                                        <a href="#" class="dropright-toggle" data-toggle="dropdown" role="button"
+                                            aria-haspopup="true" aria-expanded="false"> <span
+                                                class="nav-label">Felins</span><span class="caret"></span></a>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="#">Chats</a></li>
+                                            <li><a href="#">Lions</a></li>
+                                            <li><a href="#">Panthères</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="dropright-submenu">
+                                        <a href="#" class="dropright-toggle" data-toggle="dropdown" role="button"
+                                            aria-haspopup="true" aria-expanded="false"> <span
+                                                class="nav-label">Felins2</span><span class="caret"></span></a>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="#">Chats</a></li>
+                                            <li><a href="#">Lions</a></li>
+                                            <li><a href="#">Panthères</a></li>
+                                        </ul>
+                                    </li>
+
+                                </ul>
+                            </li>
                         </div>
-                        <div class="col dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" id="Canins"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Canins</a>
-                            <div class="dropdown-menu" aria-labelledby="Canins">
-                                <a class="dropdown-item" href="#">Lien</a>
-                                <button class="dropdown-item" type="button">Bouton</button>
-                                <span class="dropdown-item-text">Texte</span>
-                            </div>
-                        </div>
-                        <div class="col dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" id="Reptiles"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Reptiles</a>
-                            <div class="dropdown-menu" aria-labelledby="Reptiles">
-                                <a class="dropdown-item" href="#">Lien</a>
-                                <button class="dropdown-item" type="button">Bouton</button>
-                                <span class="dropdown-item-text">Texte</span>
-                            </div>
-                        </div>
-                        <div class="col dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" id="Marsupiaux"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Marsupiaux</a>
-                            <div class="dropdown-menu" aria-labelledby="Marsupiaux">
-                                <a class="dropdown-item" href="#">Lien</a>
-                                <button class="dropdown-item" type="button">Bouton</button>
-                                <span class="dropdown-item-text">Texte</span>
-                            </div>
-                        </div>
-                        <div class="col dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" id="Oiseaux"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Oiseaux</a>
-                            <div class="dropdown-menu" aria-labelledby="Oiseaux">
-                                <a class="dropdown-item" href="#">Lien</a>
-                                <button class="dropdown-item" type="button">Bouton</button>
-                                <span class="dropdown-item-text">Texte</span>
-                            </div>
-                        </div>
-                        <div class="col dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" id="Poissons"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Poissons</a>
-                            <div class="dropdown-menu" aria-labelledby="Poissons">
-                                <a class="dropdown-item" href="#">Lien</a>
-                                <button class="dropdown-item" type="button">Bouton</button>
-                                <span class="dropdown-item-text">Texte</span>
-                            </div>
-                        </div>
-                        <div class="col dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" id="Rares" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Rares</a>
-                            <div class="dropdown-menu" aria-labelledby="Rares">
-                                <a class="dropdown-item" href="#">Lien</a>
-                                <button class="dropdown-item" type="button">Bouton</button>
-                                <span class="dropdown-item-text">Texte</span>
-                            </div>
-                        </div>
+
+
                         <div class="col">Mon Panier</div>
                     </div>
                 </div>
@@ -118,10 +115,9 @@
                         src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.jgalere.com%2Fwp-content%2Fuploads%2F2014%2F11%2Fbebe-animaux-mignon-63513.jpg&f=1&nofb=1">
             </section>
         </div>
-        <div>
-        </div>
+
     </div>
-    </div>
+
 
 
 </body>
