--- a/index.html
+++ b/index.html
@@ -20,34 +20,43 @@
         border-radius: 100%;
     }
 
-    .col {
-
+    #menu {
+        background-color: rgb(240, 136, 18);
         text-align: center;
         font-style: italic;
         line-height: 300%;
+
     }
 
-    #Felins {
-        background-color: rgb(240, 136, 18)
-    }
 
     #produit {
         height: 500px;
+
+
     }
 
-    ul,
+    #infos {
+        text-align: left;
+        color: rgb(240, 238, 243);
+        margin-top: 185px;
+    }
+
     li,
-    a,
-    span {
+    a {
         color: black;
-        font-size: large;
+
         text-align: center;
-        background-color: brown;
+
     }
 
+    #espece {
+        font-size: large;
+        font-weight: bold;
+    }
 
     .dropdown-submenu {
         position: relative;
+
     }
 
     .dropdown-submenu .dropdown-menu {
@@ -68,7 +77,7 @@
             <div name="head" class="contener-fluid  vw-100" style="height: 200px; ">
 
                 <div name="shearch" class="row" style="height: 25%;">
-                    <div class="d-flex " style="background-color: rgba(206, 216, 21, 0.651);">
+                    <div id="menu" class="d-flex ">
 
 
 
@@ -76,27 +85,27 @@
 
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                    aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Services</span>
+                                    aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Felins</span>
                                     <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li class="dropright-submenu">
                                         <a href="#" class="dropright-toggle" data-toggle="dropdown" role="button"
-                                            aria-haspopup="true" aria-expanded="false"> <span
-                                                class="nav-label">Felins</span><span class="caret"></span></a>
+                                            aria-haspopup="true" aria-expanded="false"> <span class="nav-label"
+                                                id="espece">Chatons</span><span class="caret"></span></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="#">Chats</a></li>
-                                            <li><a href="#">Lions</a></li>
-                                            <li><a href="#">Panthères</a></li>
+                                            <li><a href="#">Chaton1</a></li>
+                                            <li><a href="#">Chaton2</a></li>
+                                            <li><a href="#">Chaton3</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropright-submenu">
                                         <a href="#" class="dropright-toggle" data-toggle="dropdown" role="button"
-                                            aria-haspopup="true" aria-expanded="false"> <span
-                                                class="nav-label">Felins2</span><span class="caret"></span></a>
+                                            aria-haspopup="true" aria-expanded="false"> <span class="nav-label"
+                                                id="espece">Lionceaux</span><span class="caret"></span></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="#">Chats</a></li>
-                                            <li><a href="#">Lions</a></li>
-                                            <li><a href="#">Panthères</a></li>
+                                            <li><a href="#">Lionceau1</a></li>
+                                            <li><a href="#">Lionceau2</a></li>
+                                            <li><a href="#">Lionceau3</a></li>
                                         </ul>
                                     </li>
 
@@ -104,15 +113,41 @@
                             </li>
                         </div>
 
+                        <div class="col ">Mon Panier</div>
 
-                        <div class="col">Mon Panier</div>
                     </div>
                 </div>
             </div>
             <section id="produit">
-                <div id="image" class="d-flex justify-content-center text-center h-100">
+                <div class="d-flex justify-content-center text-center h-100">
                     <img class="cercle" id="image"
                         src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.jgalere.com%2Fwp-content%2Fuploads%2F2014%2F11%2Fbebe-animaux-mignon-63513.jpg&f=1&nofb=1">
+                    <div class="contener">
+                        <div id="infos" class="row">
+                            <div class="row">
+                                <div class="col">Nom du bébé :</div>
+                                <div id="nom" class="col">Boubou</div>
+                            </div>
+                            <div class="row">
+                                <div class="col">Age du bébé :</div>
+                                <div id="age" class="col">22</div>
+                            </div>
+                            <div class="row">
+                                <div class="col">Description du bébé :</div>
+                                <div id="description" class="col">balba bla bl blbalblab blablabal balbababl bablblabalb
+                                    balb blab bla.</div>
+                            </div>
+                            <div class="row">
+                                <div class="col">Prix du bébé :</div>
+                                <div id="prix" class="col">4500</div>
+                            </div>
+                        </div>
+                        <div class="center ">
+                            <button type="button" id="ajout" style="width: 23%; " value="">Ajouter au
+                                panier</button>
+                        </div>
+                    </div>
+                </div>
             </section>
         </div>
 
