barre nav dynamique ! début fonction pour changer affichage produit ..

--- a/index.html
+++ b/index.html
@@ -84,39 +84,7 @@
                 <div name="shearch" class="row" style="height: 25%;">
                     <div id="menu" class="d-flex ">
 
-                        <div class="col d-flex nav navbar-nav">
-
-                            <ul class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                    aria-haspopup="true" aria-expanded="true"> <span class="nav-label"
-                                        data-famille="famille" id="felin">Felins</span>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li class="dropright-submenu">
-                                        <a href="#" class="dropright-toggle" data-toggle="dropdown" role="button"
-                                            aria-haspopup="true" aria-expanded="false"> <span class="nav-label"
-                                                data-espece="espece" id="chatons">Chatons</span></a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="#">Chaton1</a></li>
-                                            <li><a href="#">Chaton2</a></li>
-                                            <li><a href="#">Chaton3</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="dropright-submenu">
-                                        <a href="#" class="dropright-toggle" data-toggle="dropdown" role="button"
-                                            aria-haspopup="true" aria-expanded="false"> <span class="nav-label"
-                                                data-espece="espece" id="lionceau">Lionceaux</span><span
-                                                class="caret"></span></a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="#">Lionceau1</a></li>
-                                            <li><a href="#">Lionceau2</a></li>
-                                            <li><a href="#">Lionceau3</a></li>
-                                        </ul>
-                                    </li>
-
-                                </ul>
-                            </ul>
-                        </div>
+                        <!--Toutes les catégories sont là , mais ecrites a partir du html-->
 
                         <div class="col ">Mon Panier</div>
 
