liens cliquables git add .

--- a/index.html
+++ b/index.html
@@ -93,26 +93,24 @@
             </div>
             <section id="produit">
                 <div class="d-flex justify-content-center text-center h-100">
-                    <img class="cercle" id="image"
-                        src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.jgalere.com%2Fwp-content%2Fuploads%2F2014%2F11%2Fbebe-animaux-mignon-63513.jpg&f=1&nofb=1">
+                    <img class="cercle" id="image" src="">
                     <div class="contener">
                         <div id="infos" class="row">
                             <div class="row">
                                 <div class="col">Nom du bébé :</div>
-                                <div id="nom" class="col">Boubou</div>
+                                <div id="nom" class="col"></div>
                             </div>
                             <div class="row">
                                 <div class="col">Age du bébé :</div>
-                                <div id="age" class="col">22</div>
+                                <div id="age" class="col"></div>
                             </div>
                             <div class="row">
                                 <div class="col">Description du bébé :</div>
-                                <div id="description" class="col">balba bla bl blbalblab blablabal balbababl bablblabalb
-                                    balb blab bla.</div>
+                                <div id="description" class="col"></div>
                             </div>
                             <div class="row">
                                 <div class="col">Prix du bébé :</div>
-                                <div id="prix" class="col">4500</div>
+                                <div id="prix" class="col"></div>
                             </div>
                         </div>
                         <div class="center ">
