début de la gestion local storage pour le panier

--- a/index.html
+++ b/index.html
@@ -91,7 +91,13 @@
                     </div>
                 </div>
             </div>
-            <section id="produit">
+            <section id="accueil">
+                <div class="d-flex justify-content-evenly">
+                    <img
+                        src="https://image.freepik.com/vecteurs-libre/groupe-animaux-mignons-style-bebe-kawaii_24911-50975.jpg">
+                </div>
+            </section>
+            <section id="produit" style="display:none;">
                 <div class="d-flex justify-content-center text-center h-100">
                     <img class="cercle" id="image" src="">
                     <div class="contener">
@@ -114,7 +120,7 @@
                             </div>
                         </div>
                         <div class="center ">
-                            <button type="button" id="ajout" style="width: 23%; " value="">Ajouter au
+                            <button type="button" onclick="ajout()" id="ajout" style="width: 23%; " value="">Ajouter au
                                 panier</button>
                         </div>
                     </div>
@@ -123,8 +129,6 @@
         </div>
 
     </div>
-
-
 
 </body>
 
