--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--Recupere la bibli d'icons bootstrap-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
 </head>
 <script src="./script.js"></script>
 
@@ -92,7 +95,7 @@
                 </div>
             </div>
             <section id="accueil">
-                <div class="d-flex justify-content-evenly">
+                <div class="d-flex justify-content-around">
                     <img
                         src="https://image.freepik.com/vecteurs-libre/groupe-animaux-mignons-style-bebe-kawaii_24911-50975.jpg">
                 </div>
